Добавил ещё 1 тест и поправил один